--- a/index.html
+++ b/index.html
@@ -30,6 +30,34 @@
   <div class="container">
     <h1 class="title">Sample 展示区</h1>
 
+
+    <!-- 情景0 -->
+    <h2 class="subtitle">情景 0 - 同一说话人无关音频</h2>
+    <div class="columns">
+      <!-- 左列 -->
+      <div class="column">
+        <span class="audio-label">待识别音频</span>
+        <audio controls style="width:100%;">
+          <source src="./static/audio/scenario0_target.wav" type="audio/wav">
+        </audio>
+        <div class="content" style="margin-top:0.5rem;">
+          <p><strong>ASR:</strong> 这里放待识别音频的ASR文本</p>
+        </div>
+      </div>
+      <!-- 右列 -->
+      <div class="column">
+        <span class="audio-label">无关音频</span>
+        <audio controls style="width:100%;">
+          <source src="./static/audio/scenario0_irrelevant.wav" type="audio/wav">
+        </audio>
+        <div class="content" style="margin-top:0.5rem;">
+          <p><strong>ASR:</strong> 这里放无关音频的ASR文本</p>
+        </div>
+      </div>
+    </div>
+    
+
+
     <!-- 情景1 -->
     <h2 class="subtitle">情景 1</h2>
 
@@ -61,6 +89,7 @@
       </div>
     </div>
 
+
     <!-- 样本2 -->
     <div class="sample-box">
       <div class="columns is-vcentered">
@@ -89,6 +118,8 @@
 
     <!-- 情景2 -->
     <h2 class="subtitle">情景 2</h2>
+
+    
 
     <!-- 样本1 -->
     <div class="sample-box">
