--- a/index.html
+++ b/index.html
@@ -97,6 +97,26 @@
           <div class="audio-block" style="display: inline-block;">
             <span class="audio-label">SCR Audio</span>
             <audio controls style="width:100%;">
+              <source src="./static/audio/scenario1_sample1_scr.wav" type="audio/wav">
+            </audio>
+          </div>
+        </div>
+        <div class="column">
+          <!-- 右列文本盒子 -->
+          <div class="text-box"><strong>ASR:</strong> 这是情景1的第一条ASR文本</div>
+          <div class="text-box"><strong>意图:</strong> 这是情景1的第一条意图文本</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- 样本3 -->
+    <div class="sample-box">
+      <div class="columns is-vcentered">
+        <div class="column is-one-third has-text-centered">
+          <!-- 单个播放器，上下居中 -->
+          <div class="audio-block" style="display: inline-block;">
+            <span class="audio-label">SCR Audio</span>
+            <audio controls style="width:100%;">
               <source src="./static/audio/scenario1_sample2_scr.wav" type="audio/wav">
             </audio>
           </div>
@@ -138,6 +158,30 @@
     </div>
 
     <!-- 样本2 -->
+    <div class="sample-box">
+      <div class="columns is-vcentered">
+        <div class="column is-one-third">
+          <div class="audio-block">
+            <span class="audio-label">SCR Audio</span>
+            <audio controls style="width:100%;">
+              <source src="./static/audio/scenario2_sample1_scr.wav" type="audio/wav">
+            </audio>
+          </div>
+          <div class="audio-block">
+            <span class="audio-label">Enhanced Audio</span>
+            <audio controls style="width:100%;">
+              <source src="./static/audio/scenario2_sample1_enh.wav" type="audio/wav">
+            </audio>
+          </div>
+        </div>
+        <div class="column">
+          <div class="text-box"><strong>ASR:</strong> 这是情景2的第一条ASR文本</div>
+          <div class="text-box"><strong>意图:</strong> 这是情景2的第一条意图文本</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- 样本3 -->
     <div class="sample-box">
       <div class="columns is-vcentered">
         <div class="column is-one-third">
@@ -190,6 +234,30 @@
     </div>
 
     <!-- 样本2 -->
+    <div class="sample-box">
+      <div class="columns is-vcentered">
+        <div class="column is-one-third">
+          <div class="audio-block">
+            <span class="audio-label">SCR Audio</span>
+            <audio controls style="width:100%;">
+              <source src="./static/audio/scenario3_sample1_scr.wav" type="audio/wav">
+            </audio>
+          </div>
+          <div class="audio-block">
+            <span class="audio-label">Enhanced Audio</span>
+            <audio controls style="width:100%;">
+              <source src="./static/audio/scenario3_sample1_enh.wav" type="audio/wav">
+            </audio>
+          </div>
+        </div>
+        <div class="column">
+          <div class="text-box"><strong>ASR:</strong> 这是情景3的第一条ASR文本</div>
+          <div class="text-box"><strong>意图:</strong> 这是情景3的第一条意图文本</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- 样本3 -->
     <div class="sample-box">
       <div class="columns is-vcentered">
         <div class="column is-one-third">
