--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
     .text-box {
       border: 1px solid #ffffff;
-      background-color: #dbe1e0;
+      background-color: #eff4f3;
       padding: 0.5rem;
       margin-bottom: 0.5rem;
     }
