--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
     .text-box {
       border: 1px solid #ffffff;
-      background-color: #eff4f3;
+      background-color: #f0f7f5;
       padding: 0.5rem;
       margin-bottom: 0.5rem;
     }
@@ -33,7 +33,7 @@
       margin-bottom: 0.5rem;
     }
     .scenario0 audio {
-      width: 70%; /* <--- 调整这里可以改变情景0播放器长度 */
+      width: 50%; /* <--- 调整这里可以改变情景0播放器长度 */
     }
 
     /* ----------------- 情景1 ----------------- */
@@ -46,7 +46,7 @@
       margin-bottom: 0;
     }
     .scenario1 audio {
-      width: 250px; /* <--- 调整这里可以让情景1播放器短一些 */
+      width: 300px; /* <--- 调整这里可以让情景1播放器短一些 */
       max-width: 100%;
     }
 
@@ -58,7 +58,7 @@
       margin-bottom: 0.5rem;
     }
     .scenario2_3 audio {
-      width: 250px; /* <--- 调整这里可以让情景2和3播放器短一些 */
+      width: 300px; /* <--- 调整这里可以让情景2和3播放器短一些 */
       max-width: 100%;
     }
   </style>
